syntax = "proto3";

package auth;

option go_package = "github.com/nckh/worker/proto/auth";

// AuthService - Authentication service for Go Worker
service AuthService {
  // Register new user
  rpc Register (RegisterRequest) returns (RegisterResponse);
  // Login user
  rpc Login (LoginRequest) returns (LoginResponse);
  // Refresh access token
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
  // Validate token
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

// =========================================================
// Request Messages
// =========================================================

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string full_name = 4;
  string phone = 5;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message ValidateTokenRequest {
  string access_token = 1;
}

// =========================================================
// Response Messages
// =========================================================

message RegisterResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  string access_token = 3;
  string refresh_token = 4;
  User user = 5;
}

message RefreshTokenResponse {
  bool success = 1;
  string message = 2;
  string access_token = 3;
  string refresh_token = 4;
}

message ValidateTokenResponse {
  bool valid = 1;
  string message = 2;
  User user = 3;
}

// =========================================================
// Shared Messages
// =========================================================

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
  string role_id = 5;
  string role_name = 6;
  string role_code = 7;
  repeated string permissions = 8;
}
